fix: WASM contact form initialization - provide WASM file path to init()

--- a/static_output/assets/tailwind.css
+++ b/static_output/assets/tailwind.css
@@ -165,6 +165,9 @@
   .absolute {
     position: absolute;
   }
+  .fixed {
+    position: fixed;
+  }
   .relative {
     position: relative;
   }
@@ -195,20 +198,11 @@
   .contents {
     display: contents;
   }
-  .hidden {
-    display: none;
-  }
   .inline {
     display: inline;
   }
-  .table {
-    display: table;
-  }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .resize {
-    resize: both;
   }
   .border {
     border-style: var(--tw-border-style);
